<resources>
    <string name="app_name">TaskPostApp</string>
    <string name="save_logcat">Save LogCat</string>
    <string name="email_label">Email:</string>
    <string name="site_label">Site:</string>
    <string name="phone_label">Phone :</string>
    <string name="city_label">City:</string>
    <string name="save_user">Save User</string>
    <string name="open_map">Open map....</string>
    <string name="send_mail">Send email...</string>
    <string name="null_string">null</string>
</resources>
