<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/tw_id_post"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="25dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="36dp"
        android:textSize="32sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tw_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/tw_id_post"
        android:layout_marginEnd="124dp"
        android:layout_marginRight="124dp"/>

    <TextView
        android:id="@+id/tw_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/tw_id_post"
        android:layout_alignLeft="@+id/tw_user"
        android:layout_alignStart="@+id/tw_user"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/tw_email_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tw_id_post"
        android:layout_alignStart="@+id/tw_id_post"
        android:layout_below="@+id/tw_id_post"
        android:layout_marginTop="55dp"
        android:text="@string/email_label"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tw_site_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tw_email_label"
        android:layout_alignStart="@+id/tw_email_label"
        android:layout_below="@+id/tw_email_label"
        android:layout_marginTop="13dp"
        android:text="@string/site_label"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tw_phone_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tw_site_label"
        android:layout_alignStart="@+id/tw_site_label"
        android:layout_below="@+id/tw_site_label"
        android:layout_marginTop="11dp"
        android:text="@string/phone_label"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tw_city_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tw_phone_label"
        android:layout_alignStart="@+id/tw_phone_label"
        android:layout_below="@+id/tw_phone_label"
        android:layout_marginTop="13dp"
        android:text="@string/city_label"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tw_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tw_email_label"
        android:layout_alignBottom="@+id/tw_email_label"
        android:layout_centerHorizontal="true"
        android:gravity="start"
        android:text="TextView" />

    <TextView
        android:id="@+id/tw_site"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tw_site_label"
        android:layout_alignBottom="@+id/tw_site_label"
        android:layout_alignLeft="@+id/tw_email"
        android:layout_alignStart="@+id/tw_email"
        android:gravity="start"
        android:text="TextView" />

    <TextView
        android:id="@+id/tw_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tw_phone_label"
        android:layout_alignBottom="@+id/tw_phone_label"
        android:layout_alignLeft="@+id/tw_site"
        android:layout_alignStart="@+id/tw_site"
        android:gravity="start"
        android:text="TextView" />

    <TextView
        android:id="@+id/tw_city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tw_city_label"
        android:layout_alignBottom="@+id/tw_city_label"
        android:layout_alignLeft="@+id/tw_phone"
        android:layout_alignStart="@+id/tw_phone"
        android:gravity="start"
        android:text="TextView" />

    <Button
        android:id="@+id/btn_save_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:text="@string/save_user" />
</RelativeLayout>



